@@ -1,3 +1,8 @@
+SimpleComplex/Config 1.x, 2017-08-27
+------------------------------------
+- Cache store name prefix is now 'config.'; was 'config_'.
+- New CLI command config-list-stores.
+
 SimpleComplex/Config 1.x, 2017-08-24
 ------------------------------------
 - CLI commands must respect new command 'silent' property.
